--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,18 @@ android {
         }
     }
 
+    /**
+     * 配置keystore签名
+     */
+    signingConfigs {
+        release {
+            keyAlias 'wisdombuild'
+            keyPassword 'wisdombuild'
+            storeFile file('wisdombuild.jks')
+            storePassword 'wisdombuild'
+        }
+    }
+
     compileOptions {
 
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -45,7 +57,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
