整改复查 增加图片的展示与放大 待整改 增加弹窗可选择相机拍照 首页添加整改上报

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,8 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.24'
+
 }
 
 multiLanguages {
