--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 android.useDeprecatedNdk=true
 android.injected.testOnly=false
+android.enableAapt2=false
 
