--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 //            abiFilters 'armeabi'//, 'armeabi-v7a', 'armeabi-v8a'
 //        }
         multiDexEnabled true
+
         splits {
             abi {
                 enable true
@@ -28,6 +29,7 @@ android {
             }
         }
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -70,7 +72,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     implementation 'com.squareup.okio:okio:1.12.0'
-
+        //多语言
     implementation "com.github.jokar:multi-languages:0.0.7"
 
     //zxing
@@ -104,7 +106,7 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport:latest.release'
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
 
-    //chart
+    //chart  线图
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
     //OSS
