--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.lsy.wisdombuid"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 100
-        versionName "1.0.2"
+        versionCode 101
+        versionName "1.0.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [qqappid: "你的qq appid"]
 
@@ -18,6 +18,7 @@ android {
 //            // 设置支持的SO库架构
 //            abiFilters 'armeabi'//, 'armeabi-v7a', 'armeabi-v8a'
 //        }
+
         multiDexEnabled true
 
         splits {
@@ -31,9 +32,15 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            buildConfigField "boolean", "LOG_DEBUG", "true"   //debug模式  Klog  打开
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            buildConfigField "boolean", "LOG_DEBUG", "false"//release模式  Klog  关闭
         }
     }
 
@@ -80,6 +87,8 @@ dependencies {
 
     //zxing
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    //KLog  日志 工具
+    implementation 'com.github.zhaokaiqiang.klog:library:1.6.0'
 
 
 //    //七牛
@@ -89,6 +98,39 @@ dependencies {
 //    implementation 'com.contrarywind:Android-PickerView:4.1.8'
 //    implementation 'liji.library.dev:citypickerview:4.3.2'
 
+    //chart  线图
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
+    //OSS
+    implementation 'com.aliyun.dpa:oss-android-sdk:+'//这里用sdk+ 是为了随时跟随oss的版本更新，oss也会随时修复bug。
+
+    //videoPlayer
+//    implementation 'fm.jiecao:jiecaovideoplayer:4.8.3'
+//    implementation 'cn.jzvd:jiaozivideoplayer:7.2.3'
+
+    //注解
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+
+    //完整版引入
+    implementation 'com.shuyu:GSYVideoPlayer:7.0.1'
+
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.24'
+    //万能适配器
+//    implementation 'jsc.kit.adapter:adapter-component:_latestVersion'
+//    implementation 'com.yuyh.easyadapter:library:1.2.0'
+    implementation 'com.zhy:base-rvadapter:3.0.3'
+    // 刷新框架
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'//没有使用特殊Header，可以不加这行
+
+    implementation 'com.lzy.net:okgo:3.0.4'
+
+    // 百度地图
+    implementation files('src/main/jniLibs/BaiduLBS_Android.jar')
+    implementation project(path: ':calendar')
 
     // 友盟基础组件库（所有友盟业务SDK都依赖基础组件库）
     implementation "com.umeng.umsdk:common:2.1.0"
@@ -109,41 +151,6 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport:latest.release'
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
 
-    //chart  线图
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
-    //OSS
-    implementation 'com.aliyun.dpa:oss-android-sdk:+'//这里用sdk+ 是为了随时跟随oss的版本更新，oss也会随时修复bug。
-
-    //videoPlayer
-//    implementation 'fm.jiecao:jiecaovideoplayer:4.8.3'
-//    implementation 'cn.jzvd:jiaozivideoplayer:7.2.3'
-
-    //注解
-    implementation 'com.jakewharton:butterknife:10.2.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
-
-    //万能适配器
-//    implementation 'jsc.kit.adapter:adapter-component:_latestVersion'
-//    implementation 'com.yuyh.easyadapter:library:1.2.0'
-    implementation 'com.zhy:base-rvadapter:3.0.3'
-
-
-    //完整版引入
-    implementation 'com.shuyu:GSYVideoPlayer:7.0.1'
-
-    implementation 'com.android.support:multidex:1.0.3'
-
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.24'
-
-    implementation 'com.lzy.net:okgo:3.0.4'
-
-    // 百度地图
-    implementation files('src/main/jniLibs/BaiduLBS_Android.jar')
-    implementation project(path: ':calendar')
-    // 刷新框架
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
-    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'//没有使用特殊Header，可以不加这行
 }
 
 multiLanguages {
